--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            Gyansrover Aligarh<br>
+            202001 PtterPradesh<br>
+            India
             </p>
 
    		</div>
@@ -396,7 +396,7 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
+   			<p>https://therock73-cloud.github.io/<br>
 			   	sorbh73@gmail.com			     
 			   </p>
 
